fixed tabs and added links for project items

--- a/projects/cocotrade.html
+++ b/projects/cocotrade.html
@@ -101,6 +101,16 @@
                     </ul>
                 </nav>
             </div>
+
+            <div class="nav-wrapper">
+                <h4 class="title-nav">Links</h4>
+                <nav class="container-nav">
+                    <ul>
+                        <li><a href="https://cocotrade.net/">Landing Page</a></li>
+                        <li><a href="../docs/cocotrade_project_proposal.pdf" target="_blank">Project Proposal</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
 
         <div class="right-nav">
