--- a/projects/glucofit.html
+++ b/projects/glucofit.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class="cover-details">
-                <p>Project Managar | UI/UX Designer</p>
+                <p>Project Manager | UI/UX Designer</p>
             </div>
 
             <div class="cover-subtitle">
@@ -99,6 +99,16 @@
                         <li><a href="">Branding</a></li>
                         <li><a href="">Mockup</a></li>
                         <li><a href="">Takeaways</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="nav-wrapper">
+                <h4 class="title-nav">Links</h4>
+                <nav class="container-nav">
+                    <ul>
+                        <li><a href="https://glucofit.ca/">Landing Page</a></li>
+                        <li><a href="../docs/glucofit_project_proposal.pdf" target="_blank">Project Proposal</a></li>
                     </ul>
                 </nav>
             </div>
