update glucofit content

--- a/projects/glucofit.html
+++ b/projects/glucofit.html
@@ -97,7 +97,7 @@
                         <li><a href="">Ideation</a></li>
                         <li><a href="">Wireframing</a></li>
                         <li><a href="">Branding</a></li>
-                        <li><a href="">Mockup</a></li>
+                        <li><a href="">Mockups</a></li>
                         <li><a href="">Takeaways</a></li>
                     </ul>
                 </nav>
@@ -107,7 +107,7 @@
                 <h4 class="title-nav">Links</h4>
                 <nav class="container-nav">
                     <ul>
-                        <li><a href="https://glucofit.ca/">Landing Page</a></li>
+                        <li><a href="https://glucofit.ca/" target="_blank">Landing Page</a></li>
                         <li><a href="../docs/glucofit_project_proposal.pdf" target="_blank">Project Proposal</a></li>
                     </ul>
                 </nav>
@@ -115,43 +115,116 @@
         </div>
         <div class="right-nav">
             <div class="project-content">
-                <h3>Overview</h3>
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <h4 class="content-sub">Overview</h4>
+                <p>The started when </p>
             </div>
 
             <div id="problem" class="project-content">
-                <h4>Problem</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <h4 class="content-sub">Problem</h4>
+                <p>A lot of patients who are diagnosed with Type 2 diabetes and Prediabetes struggle to manage their blood sugar levels due to a lack of personalized insights, motivation, and easy glucose tracking methods. Existing solutions often fail to provide engaging features that encourage consistent health monitoring. As a result, patients may find it challenging to adopt healthier habits, track their progress, and stay motivated on their journey to improve their overall health and reverse their condition.</p>
             </div>
 
             <div id="Solution" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <h4 class="content-sub">Solution</h4>
+                <p>A mobile app for people who may be prediabetic or already diabetic. It helps them manage their blood sugar level through automated glucose logging and personalized insights on food and lifestyle. The app promotes progress through fun challenges, where users can earn weekly streaks and milestone badges to stay motivated and consistent toward a healthier lifestyle.
+                </p>
+            </div>
+
+
+            <div id="overview" class="project-content">
+                <div class="research-section">
+                    <h4 class="content-sub">Research</h4>
+                    <p>Our UX Research began by conducting user interviews to identify the need of people with prediabetes and diabetes. Our team inteviewed 5 people, 1 prediabetic, 2 diabetic and 2 health practitioners.</p>
+                    <div class="competitive-analysis">
+                        <h4 class="research-section">Competitive Analysis</h4>
+                        <p>I did a thorough competitive analysis to execute a different approach from the existing apps like, MySugr, Glucose Buddy and OneTouch.</p>
+                        <img src="../images/glucofit-competitive-analysis.jpg" alt="">
+                    </div>
             </div>
 
             <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <h4 class="content-sub">Wireframing</h4>
+                <p>Wireframing was a crucial step in ensuring the usability of the app. Through multiple iterations, we focused on the simplicity and accessibility to accomodate our target users who are primarily middle-aged and older adults.</p>
+
+                <p>In this part, I was assigned to design the screens for Insights, BGL Auto-logging and Offline Readings, and History Log.</p>
+
+                <div class="sub-parts">
+                    <div class="screens">
+                        <h4>Insights</h4>
+                        <img src="../images/glucofit-insights.png" alt="">
+                    </div>
+                    
+                    <div class="screens">
+                        <h4>BGL Auto-logging and Offline Readings</h4>
+                        <img src="../images/glucofit-bgl-auto-logging.png" alt="">
+                    </div>
+
+                    <div class="screens">
+                        <h4>History Log</h4>
+                        <img src="../images/glucofit-history-log.png" alt="">
+                    </div>
+                </div>
             </div>
 
             <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <h4 class="content-sub">Branding</h4>
+                <div class="sub-parts">
+                    <div class="branding">
+                        <h4>Logo</h4>
+                        <p>Our logo features a sugar cube that our team called "Sugar Baby". In this way, our app gives a fresh take on glucose management while balancing irony with approachability. We used plus and minus symbols for the eyes to indicate glucose highs and lows.</p>
+                        <img src="../images/glucofir-branding-logo.png" alt="">
+                    </div>
+
+                    <div class="branding">
+                        <h4>Colors</h4>
+                        <p>We chose indigo as our primary color for accuracy and trust while orange and yellow as our secondary colors for a friendly and motivating feel.</p>
+                        <img src="../images/glucofir-branding-colors.png" alt="">
+                    </div>
+
+                    <div class="branding">
+                        <h4>Typography</h4>
+                        <p>For typography, we used Nunito Sans for its soft, rounded edges and great legibility.</p>
+                        <img src="../images/glucofit-branding-type.png" alt="">
+                    </div>
+
+                    <div class="branding">
+                        <h4>Illustrations</h4>
+                        <p>Our illustrations were based on the Sugar Baby to visually represent glucose readings.</p>
+                        <img src="../images/glucofit-branding-illustrations.png" alt="">
+                    </div>
+
+                    <div class="branding">
+                        <h4>Buttons and Icons</h4>
+                        <p>We design our buttons with rounded corners to maintain the friendliness of app. And our icons were designed as outlined to keep the simplicity. Lastyl, our badge were carefully designed to enhance our user engangement.</p>
+                        <img src="../images/glucofit-branding-cards-icons-badge.png" alt="">
+                    </div>
+                </div>
             </div>
 
             <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <h4 class="content-sub">Mockups</h4>
+                <p>For effective implementation of our mockup screens, us designers provided detailed annotations to developers during the design handoff.</p>
+
+                <div class="sub-parts">
+                    <div class="screens">
+                        <h4>Insights</h4>
+                        <img src="../images/glucofit-mockup-insights.png" alt="">
+                    </div>
+                    
+                    <div class="screens">
+                        <h4>BGL Auto-logging and Offline Readings</h4>
+                        <img src="../images/glucofit-mockup-auto-logging.png" alt="">
+                    </div>
+
+                    <div class="screens">
+                        <h4>History Log</h4>
+                        <img src="../images/glucofit-mockup-history.png" alt="">
+                    </div>
+                </div>
             </div>
 
             <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
-            </div>
-
-            <div id="overview" class="project-content">
-                <h4>Overview</h4>
+                <h4 class="content-sub">Takeaways</h4>
                 <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
             </div>
         </div>
