--- a/projects/cocotrade.html
+++ b/projects/cocotrade.html
@@ -106,7 +106,7 @@
                 <h4 class="title-nav">Links</h4>
                 <nav class="container-nav">
                     <ul>
-                        <li><a href="https://cocotrade.net/">Landing Page</a></li>
+                        <li><a href="https://cocotrade.net/" target="_blank">Landing Page</a></li>
                         <li><a href="../docs/cocotrade_project_proposal.pdf" target="_blank">Project Proposal</a></li>
                     </ul>
                 </nav>
