--- a/projects/cocotrade.html
+++ b/projects/cocotrade.html
@@ -94,9 +94,9 @@
                 <nav class="container-nav">
                     <ul>
                         <li><a href="#research">Research</a></li>
-                        <li><a href="#wireframe">Wireframing</a></li>
-                        <li><a href="#design">Design System</a></li>
-                        <li><a href="#mockup">Mockup</a></li>
+                        <li><a href="#wireframes">Wireframes</a></li>
+                        <li><a href="#branding">Branding</a></li>
+                        <li><a href="#mockups">Mockup</a></li>
                         <li><a href="#takeaways">Takeaways</a></li>
                     </ul>
                 </nav>
@@ -151,7 +151,7 @@
 
             </div>
 
-            <div id="wireframe" class="project-content">
+            <div id="wireframes" class="project-content">
                 <h4>Wireframes</h4>
                 <p></p>
                 <div class="container-wireframe">
@@ -159,8 +159,8 @@
                 </div>
             </div>
 
-            <div id="design" class="project-content">
-                <h4>Design System</h4>
+            <div id="branding" class="project-content">
+                <h4>Branding</h4>
                 <p>The logo of Cocotrade is a representation of palm leaves, which symbolizes sustainability and the tree where copra is from, with the bar charts representing the platform’s data-dhriven insights and analytics </p>
 
                 <div class="container-design">
@@ -172,7 +172,7 @@
 
             </div>
 
-            <div id="mockup" class="project-content">
+            <div id="mockups" class="project-content">
                 <h4>Mockups</h4>
                 <p></p>
                 <div class="container-mockups">
