--- a/projects/glucofit.html
+++ b/projects/glucofit.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="cover-details">
-                <p>12 Weeks</p>
+                <p>13 Weeks</p>
             </div>
 
             <div class="cover-subtitle">
@@ -93,12 +93,12 @@
                 <h4 class="title-nav">Process</h4>
                 <nav class="container-nav">
                     <ul>
-                        <li><a href="">Research</a></li>
-                        <li><a href="">Ideation</a></li>
-                        <li><a href="">Wireframing</a></li>
-                        <li><a href="">Branding</a></li>
-                        <li><a href="">Mockups</a></li>
-                        <li><a href="">Takeaways</a></li>
+                        <li><a href="#research">Research</a></li>
+                        <li><a href="#wireframes">Wireframes</a></li>
+                        <li><a href="#branding">Branding</a></li>
+                        <li><a href="#mockups">Mockups</a></li>
+                        <li><a href="#marketing">Marketing Matls</a></li>
+                        <li><a href="#takeaways">Takeaways</a></li>
                     </ul>
                 </nav>
             </div>
@@ -116,7 +116,7 @@
         <div class="right-nav">
             <div class="project-content">
                 <h4 class="content-sub">Overview</h4>
-                <p>The started when </p>
+                <p>The idea for Glucofit was inspired by my grandmother, who has diabetes. Watching her check glucose levels with a glucometer by pricking her finger and manually record them in a notebook to share with her doctor felt like a time-consuming and error-prone process. That sparked the idea for Glucofit, to simplify glucose monitoring and help individuals with prediabetes and diabetes to take control of their health.</p>
             </div>
 
             <div id="problem" class="project-content">
@@ -124,16 +124,16 @@
                 <p>A lot of patients who are diagnosed with Type 2 diabetes and Prediabetes struggle to manage their blood sugar levels due to a lack of personalized insights, motivation, and easy glucose tracking methods. Existing solutions often fail to provide engaging features that encourage consistent health monitoring. As a result, patients may find it challenging to adopt healthier habits, track their progress, and stay motivated on their journey to improve their overall health and reverse their condition.</p>
             </div>
 
-            <div id="Solution" class="project-content">
+            <div id="solution" class="project-content">
                 <h4 class="content-sub">Solution</h4>
                 <p>A mobile app for people who may be prediabetic or already diabetic. It helps them manage their blood sugar level through automated glucose logging and personalized insights on food and lifestyle. The app promotes progress through fun challenges, where users can earn weekly streaks and milestone badges to stay motivated and consistent toward a healthier lifestyle.
                 </p>
             </div>
 
 
-            <div id="overview" class="project-content">
+            <div id="research" class="project-content">
+                <h4 class="content-sub">Research</h4>
                 <div class="research-section">
-                    <h4 class="content-sub">Research</h4>
                     <p>Our UX Research began by conducting user interviews to identify the need of people with prediabetes and diabetes. Our team inteviewed 5 people, 1 prediabetic, 2 diabetic and 2 health practitioners.</p>
                     <div class="competitive-analysis">
                         <h4 class="research-section">Competitive Analysis</h4>
@@ -142,8 +142,8 @@
                     </div>
             </div>
 
-            <div id="overview" class="project-content">
-                <h4 class="content-sub">Wireframing</h4>
+            <div id="wireframes" class="project-content">
+                <h4 class="content-sub">Wireframes</h4>
                 <p>Wireframing was a crucial step in ensuring the usability of the app. Through multiple iterations, we focused on the simplicity and accessibility to accomodate our target users who are primarily middle-aged and older adults.</p>
 
                 <p>In this part, I was assigned to design the screens for Insights, BGL Auto-logging and Offline Readings, and History Log.</p>
@@ -166,7 +166,7 @@
                 </div>
             </div>
 
-            <div id="overview" class="project-content">
+            <div id="branding" class="project-content">
                 <h4 class="content-sub">Branding</h4>
                 <div class="sub-parts">
                     <div class="branding">
@@ -201,7 +201,7 @@
                 </div>
             </div>
 
-            <div id="overview" class="project-content">
+            <div id="mockups" class="project-content">
                 <h4 class="content-sub">Mockups</h4>
                 <p>For effective implementation of our mockup screens, us designers provided detailed annotations to developers during the design handoff.</p>
 
@@ -223,9 +223,31 @@
                 </div>
             </div>
 
-            <div id="overview" class="project-content">
+            <div id="marketing" class="project-content">
+                <h4 class="content-sub">Marketing Materials</h4>
+                <p>I designed our marketing materials using Adobe InDesign.</p>
+                <p>The layout and designs were inspired by the landing page of the project to them all look cohesive.</p>
+
+                <div class="sub-parts">
+                    <div class="linkedin">
+                        <h4>LinkedIn Post</h4>
+                        <img src="../images/glucofit-linkedin-post.jpg" alt="">
+                    </div>
+                    
+                    <div class="one-pager">
+                        <h4>One Pager</h4>
+                        <img src="../images/glucofit-one-pager.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div id="takeaways" class="project-content">
                 <h4 class="content-sub">Takeaways</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <p>I realized that the true measure of a project’s success isn’t the complexity of the tech stack or the perfection of the design—it’s about solving real problems. By focusing on what truly matters to users and prioritizing their needs, we can create meaningful solutions. Keeping things simple, accessible, and purpose-driven is the key to making an impact.
+                </p>
+
+                <p>Our team has been honored with the Best of Show Award for GlucoFit during our Capstone Project Presentation. This recognition reflects the strong value it brings to people with diabetes and its potential to make a positive difference in their lives. It’s a testament to the power of teamwork and staying dedicated to solving real-world challenges.
+                </p>
             </div>
         </div>
 
