update mobile view first with no projects and about update

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
         <!-- navigation -->
         <div class="main-header">
             <h1 class="penguin-logo">
-                <a href="index.html">
+                <a href="../pages/index.html">
                     <img src="../images/penguin-logo.png" alt="jennifermallari-logo">
                 </a>
             </h1>
@@ -27,7 +27,7 @@
             <!-- main navigation -->
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/pages/projects.html">Projects</a></li>
+                    <li><a href="../pages/projects.html">Projects</a></li>
                     <!-- <li><a href="#gallery">Gallery</a></li> -->
                     <li><a href="">About</a></li>
                     <li><a href="mailto:jennifergmallari@gmail.com">Contact</a></li>
@@ -124,7 +124,7 @@
 
             <!-- view project button -->
             <button class="view-project">
-                <a href="/pages/projects/cocotrade.html">
+                <a href="../pages/projects/cocotrade.html">
                 <div class="project-image">
                     <img src="../images/cocotrade-logo.png" alt="cocotrade-logo">
                 </div>
@@ -152,7 +152,7 @@
 
             <!-- view project button -->
             <button class="view-project">
-                <a href="../projects/glucofit.html">
+                <a href="../pages/projects/stashaway.html">
                 <div class="project-image">
                     <img src="../images/stashaway-logo.png" alt="stashaway-logo">
                 </div>
