--- a/pages/projects/glucofit.html
+++ b/pages/projects/glucofit.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/zrf4hff.css">
     <script src="https://kit.fontawesome.com/b479c2d499.js" crossorigin="anonymous"></script>
     <script src="../function.js" defer></script>
-    <link rel="stylesheet" href="/css/project-items.css">
+    <link rel="stylesheet" href="../../css/project-items.css">
 </head>
 <body>
 
