update mobile view first with no projects and about update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/zrf4hff.css">
     <script src="https://kit.fontawesome.com/b479c2d499.js" crossorigin="anonymous"></script>
     <script src="../function.js" defer></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body>
@@ -19,7 +19,7 @@
         <!-- navigation -->
         <div class="main-header">
             <h1 class="penguin-logo">
-                <a href="../pages/index.html">
+                <a href="index.html">
                     <img src="../images/penguin-logo.png" alt="jennifermallari-logo">
                 </a>
             </h1>
