--- a/pages/projects/cocotrade.html
+++ b/pages/projects/cocotrade.html
@@ -19,7 +19,7 @@
         <!-- navigation -->
         <div class="main-header">
             <h1 class="penguin-logo">
-                <a href="/pages/index.html">
+                <a href="/index.html">
                 <img src="/images/penguin-logo.png" alt="jennifermallari logo">
                 </a>
             </h1>
