update mobile view first with no projects and about update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- navigation -->
         <div class="main-header">
             <h1 class="penguin-logo">
-                <a href="index.html">
+                <a href="/index.html">
                     <img src="../images/penguin-logo.png" alt="jennifermallari-logo">
                 </a>
             </h1>
@@ -172,7 +172,7 @@
                         <i aria-hidden="true" title="Linkedin"></i>
                             <span>Linkedin</span>
                     </a>
-                    <a href="../docs/mallarijenniferg-resume1.pdf" target="_blank">Resume</a>
+                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank">Resume</a>
                 </div>
             </div>
 
