--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </video>
 
         <div class="hero-content">
-            <h2 class="name">Hi I'm Jennifer Mallari!</h2>
-            <p class="bio">A UI/UX designer based in Vancouver, BC with 5 years of experience in satellite engineering, driven in combining design skills and technical expertise to create human-centred solutions that helps connect complex systems with user needs. Skilled in front-end development, user research, usability testing, wireframing, prototyping, and design systems.</p>
+            <h2 class="name">Hi! I'm Jennifer,</h2>
+            <p class="bio">a UI/UX designer based in Vancouver, BC with 5 years of experience in satellite engineering, driven in combining design skills and technical expertise to create human-centred solutions that helps connect complex systems with user needs. Skilled in front-end development, user research, usability testing, wireframing, prototyping, and design systems.</p>
 
             <!-- scroll down button -->
             <button class="scroll-down" id="scroll-down-btn">
@@ -66,22 +66,23 @@
 
     <!-- projects -->
     <main class="projects-wrapper">
+
         <!-- project 1 brief -->
         <section class="projects">
             <div class="project-content">
-                <h3 class="project-title">Glucofit</h3>
+                <h3 class="project-title">Innovate Recreation</h3>
                 <div class="project-subtitle">
-                    <p>Your everyday guide to balanced glucose health.</p>
+                    <p>Inclusion, Diversity, Equity and Accessibility in Public Recreation</p>
                 </div>
                 <div class="category-tabs">
                     <div class="tabs">
-                        <a href="">Project Management</a>
+                        <p>Web Design</p>
                     </div>
                     <div class="tabs">
-                        <a href="">UI/UX Design</a>
+                        <p>Web Development</p>
                     </div>
                     <div class="tabs">
-                        <a href="">Mobile App</a>
+                        <p>Graphic Design</p>
                     </div>
                 </div>
                 <p class="project-description">Glucofit is a mobile app for people with diabetes to help them monitor their blood sugar level through automated glucose logging and personalized insights and gamification to keep users motivated.</p>
@@ -95,9 +96,11 @@
 
             <!-- view project button -->
             <button class="view-project">
-                <a href="../pages/projects/glucofit.html">
+                <a href="/pages/projects/glucofit.html">
                 <div class="project-image">
-                    <img src="../images/glucofit-logo.png" alt="glucofit-logo">
+                    <!-- <div class="img-container"> -->
+                        <img src="/images/innovaterecreation-cover.png" alt="glucofit-cover">
+                    <!-- </div> -->
                 </div>
                 </a>
             </button>
@@ -106,27 +109,37 @@
         <!-- project 2 brief -->
         <section class="projects">
             <div class="project-content">
-                <h3 class="project-title">CocoTrade</h3>
+                <h3 class="project-title">Glucofit</h3>
                 <div class="project-subtitle">
-                    <p>One stop platform to streamline your copra trading.</p>
+                    <p>Your everyday guide to balanced glucose health.</p>
                 </div>
                 <div class="category-tabs">
                     <div class="tabs">
-                        <a href="">UI/UX Design</a>
+                        <p>Project Management</p>
                     </div>
                     <div class="tabs">
-                        <a href="">Responsive Web App</a>
+                        <p>UI/UX Design</p>
+                    </div>
+                    <div class="tabs">
+                        <p>Mobile App</p>
                     </div>
                 </div>
-                <p class="project-description">CocoTrade is a web app designed to modernize and streamline the operations of small and medium-sized copra trading businesses, particularly in Southeast Asia.</p>
+                <p class="project-description">Glucofit is a mobile app for people with diabetes to help them monitor their blood sugar level through automated glucose logging and personalized insights and gamification to keep users motivated.</p>
                 
+                <!-- <button class="view-project" id="glucofit-page-btn">
+                    <a href="../projects/glucofit.html">
+                        View Project
+                        <i class="fa-solid fa-arrow-right"></i></a>
+                </button> -->
             </div>
 
             <!-- view project button -->
             <button class="view-project">
-                <a href="../pages/projects/cocotrade.html">
+                <a href="/pages/projects/glucofit.html">
                 <div class="project-image">
-                    <img src="../images/cocotrade-logo.png" alt="cocotrade-logo">
+                    <!-- <div class="img-container"> -->
+                        <img src="/images/glucofit-cover.jpg" alt="glucofit-cover">
+                    <!-- </div> -->
                 </div>
                 </a>
             </button>
@@ -135,16 +148,47 @@
         <!-- project 3 brief -->
         <section class="projects">
             <div class="project-content">
+                <h3 class="project-title">CocoTrade</h3>
+                <div class="project-subtitle">
+                    <p>One stop platform to streamline your copra trading.</p>
+                </div>
+                <div class="category-tabs">
+                    <div class="tabs">
+                        <p>UI/UX Design</p>
+                    </div>
+                    <div class="tabs">
+                        <p>Responsive Web App</p>
+                    </div>
+                </div>
+                <p class="project-description">CocoTrade is a web app designed to modernize and streamline the operations of small and medium-sized copra trading businesses, particularly in Southeast Asia.</p>
+                
+            </div>
+
+            <!-- view project button -->
+            <button class="view-project">
+                <a href="/pages/projects/glucofit.html">
+                <div class="project-image">
+                    <!-- <div class="img-container"> -->
+                        <img src="/images/cocotrade-cover2.jpg" alt="glucofit-cover">
+                    <!-- </div> -->
+                </div>
+                </a>
+            </button>
+        </section>
+
+        <!-- project 4 brief -->
+        <section class="projects">
+            <div class="project-content">
                 <h3 class="project-title">Stashaway</h3>
                 <div class="project-subtitle">
                     <p>Store smart, live light.</p>
                 </div>
                 <div class="category-tabs">
                     <div class="tabs">
-                        <a href="">UI/UX Design</a>
+                        <p>UI/UX Design</p>
                     </div>
                     <div class="tabs">
-                        <a href="">Web & Mobile App</a>
+                        <p>Web & Mobile App</p>
                     </div>
                 </div>
                 <p class="project-description">An app that lets you easily find, book, and manage self-storage units, with the added convenience of seamless pickup and delivery services for your items.</p>
@@ -154,7 +198,7 @@
             <button class="view-project">
                 <a href="../pages/projects/stashaway.html">
                 <div class="project-image">
-                    <img src="../images/stashaway-logo.png" alt="stashaway-logo">
+                    <img src="/images/stashaway-cover2.jpg" alt="stashaway-cover">
                 </div>
                 </a>
             </button>
