--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/b479c2d499.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/zrf4hff.css">
     <script src="function.js" defer></script>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="/css/about.css">
     
 </head>
 
@@ -61,7 +61,7 @@
                         <i aria-hidden="true" title="Linkedin"></i>
                             <span>Linkedin</span>
                     </a>
-                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank">Resume</a>
+                    <a href="/docs/mallarijenniferg-resume.pdf" target="_blank">Resume</a>
                 </div>
             </div>
 
