updated font size of hero section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="hero-content">
             <h2 class="name">Hi! I'm Jennifer,</h2>
-            <p class="bio">a UI/UX designer based in Vancouver, BC with 5 years of experience in satellite engineering, driven in combining design skills and technical expertise to create human-centred solutions that helps connect complex systems with user needs. Skilled in front-end development, user research, usability testing, wireframing, prototyping, and design systems.</p>
+            <p class="bio">a UI/UX designer based in Vancouver, BC focused in combining design skills and technical expertise to create human-centred solutions that helps connect complex systems with user needs. Skilled in front-end development, user research, usability testing, wireframing, prototyping, and design systems.</p>
 
             <!-- scroll down button -->
             <button class="scroll-down" id="scroll-down-btn">
