--- a/pages/projects/glucofit.html
+++ b/pages/projects/glucofit.html
@@ -178,12 +178,12 @@
                 </div>
 
                 <div id="" class="content">
-                    <h5 class="content-sub">Problem</h5>
+                    <h5 class="content-sub">The Problem</h5>
                     <p>Managing blood sugar levels can be overwhelming for individuals with Type 2 diabetes and prediabetes, especially with traditional methods like manual glucose tracking. Many patients struggle due to a lack of personalized insights, motivation, and easy-to-use tracking solutions. Existing apps often fail to provide engaging features that encourage consistent health monitoring. As a result patients may find it challenging to adopt healthier habits, track their progress, and stay motivated on their journey to improve their overall health and reverse their condition.</p>
                 </div>
 
                 <div id="" class="content">
-                    <h5 class="content-sub">Solution</h5>
+                    <h5 class="content-sub"> Our Solution</h5>
                     <p>Glucofit is designed to help individuals with prediabetes and diabetes monitor their blood sugar levels effortlessly through:</p>
 
                     <div class="sub-parts">
@@ -211,7 +211,7 @@
 
             <!-- design process -->
             <div class="category">
-                <h4 class="category-nav-title">Design</h4>
+                <h4 class="category-nav-title">Design Process</h4>
 
                 <div id="research" class="content">
                     <h5 class="content-sub">Research</h5>
