--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <!-- main navigation -->
             <nav class="main-nav">
                 <ul>
-                    <li><a href="../pages/projects.html">Projects</a></li>
+                    <li><a href="">Projects</a></li>
                     <!-- <li><a href="#gallery">Gallery</a></li> -->
                     <li><a href="">About</a></li>
+                    <li><a href="https://www.linkedin.com/in/jennifergmallari/">Linkedin</a></li>
                     <li><a href="mailto:jennifergmallari@gmail.com">Contact</a></li>
                 </ul>
             </nav>
@@ -40,7 +41,7 @@
                 <div class="nav-list-container" onclick="closeMenu()">
                     <button id="primary-nav-close" onclick="closeMenu()">&times;</button>
                     <ul>
-                        <li><a href="../pages/projects.html">Projects</a></li>
+                        <li><a href="">Projects</a></li>
                         <!-- <li><a href="#gallery">Gallery</a></li> -->
                         <li><a href="#about">About</a></li>
                     </ul>
@@ -85,7 +86,7 @@
                         <p>Graphic Design</p>
                     </div>
                 </div>
-                <p class="project-description">Glucofit is a mobile app for people with diabetes to help them monitor their blood sugar level through automated glucose logging and personalized insights and gamification to keep users motivated.</p>
+                <p class="project-description">A research project where we want to learn how immigrants and people from different backgrounds use parks, recreation centers, and recreation programs.</p>
                 
                 <!-- <button class="view-project" id="glucofit-page-btn">
                     <a href="../projects/glucofit.html">
@@ -96,7 +97,7 @@
 
             <!-- view project button -->
             <button class="view-project">
-                <a href="/pages/projects/glucofit.html">
+                <a href="">
                 <div class="project-image">
                     <!-- <div class="img-container"> -->
                         <img src="/images/innovaterecreation-cover.png" alt="glucofit-cover">
@@ -166,7 +167,7 @@
 
             <!-- view project button -->
             <button class="view-project">
-                <a href="/pages/projects/glucofit.html">
+                <a href="/pages/projects/cocotrade.html">
                 <div class="project-image">
                     <!-- <div class="img-container"> -->
                         <img src="/images/cocotrade-cover2.jpg" alt="glucofit-cover">
@@ -196,7 +197,7 @@
 
             <!-- view project button -->
             <button class="view-project">
-                <a href="../pages/projects/stashaway.html">
+                <a href="">
                 <div class="project-image">
                     <img src="/images/stashaway-cover2.jpg" alt="stashaway-cover">
                 </div>
@@ -216,7 +217,7 @@
                         <i aria-hidden="true" title="Linkedin"></i>
                             <span>Linkedin</span>
                     </a>
-                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank">Resume</a>
+                    <a href="/docs/mallarijenniferg-resume.pdf" target="_blank">Resume</a>
                 </div>
             </div>
 
